fix overflow in terminal display

--- a/website/website/static/blog/css/termynal.css
+++ b/website/website/static/blog/css/termynal.css
@@ -13,6 +13,7 @@
 }
 
 [data-termynal] {
+    overflow-x: auto;
     width: 750px;
     max-width: 100%;
     background: var(--color-bg);
